# AI-Pewniaczek

./: .gitignore  README.md  event_ids_ekstraklasa_2526.txt  event_ids_ekstraklasa_2526_first10.txt  flashscore_urls_ekstraklasa_2526.txt  flashscore_urls_mobile_ekstraklasa_2526.txt  pyproject.toml  requirements.txt
data/: flashscore_storage_state.json  repair_log.txt  repair_out.txt
docs/: DATA_GAP_PROTOCOL.md  TARGET_SPEC.md
scripts/: after_repair_audit.ps1  backfill_lineups.py  build_integration_supplement.py  data_integrity_flashscore.py  debug_flashscore_render.py  download_cache_footballdata_mirror.py  download_engsoccerdata_cups.py  download_flashscore_domestic_results_seeds.py  download_flashscore_integration_feeds.py  download_flashscore_uefa_results_seeds.py  download_openfootball_allowlist.py  download_supplement_free.py  harvest_cups.py  integration_coverage.py  integration_diag.py  integration_gap_review.py  meta_gap_event_id_sample.py  migrate_supplement_fixture_uid.py  model_input_coverage.py  rca_lookup_miss_filter.py  retry_cup_wyniki_backfill.py  slice_flashscore_list_feed.py
tests/: test_cache_footballdata_mirror.py  test_diagnose_fd_row_miss.py  test_domestic_cup_flashscore_manifest.py  test_engsoccerdata_join.py  test_flashscore_domestic_results_seed.py  test_flashscore_feed_match_meta.py  test_flashscore_integration_feeds.py  test_flashscore_repair_feeds.py  test_flashscore_uefa_results_seed.py  test_integration_diag.py  test_integration_gap_review.py  test_join_openfootball.py  test_match_identity.py  test_model_input_coverage.py
(+3363 files in other folders)
